--- a/extra/domain.conf
+++ b/extra/domain.conf
@@ -9,7 +9,7 @@ server {
     root /var/www/html;
     index index.php index.html;
 
-    access_log /dev/stdout;
+    access_log /dev/stdout main;
     error_log /dev/stderr notice;
 
     disable_symlinks off;
@@ -36,6 +36,17 @@ server {
       include fastcgi_params;
 
     }
+
+        location ~ ^/(status|ping)$ {
+          allow 127.0.0.1;
+          fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+          fastcgi_index index.php;
+          include fastcgi_params;
+          #fastcgi_pass 127.0.0.1:9000;
+          fastcgi_pass  unix:/var/run/php82-fpm.sock;
+        }
+
+
 
     ## Block common exploits
     location ~* (<|%3C).*script.*(>|%3E) { access_log /var/log/nginx/blocked.log blocked; deny all; }
