--- a/extra/fpm-pool.conf
+++ b/extra/fpm-pool.conf
@@ -10,7 +10,8 @@ listen.owner = ubuntu
 listen.group = ubuntu
 
 ; Enable status page
-pm.status_path = /fpm-status
+pm.status_path = /status
+ping.path = /ping
 
 ; Ondemand process manager
 pm = ondemand
